plugins {
    id 'net.minecraftforge.gradle' version '[5.1,6.0)'
    id 'java'
}

version = "${mod_version}"
group = 'dev.ManlyTorch.cdu_utilities'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

minecraft {
    mappings channel: 'official', version: "${minecraft_version}"
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods { cduutils { source sourceSets.main } }
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
}

jar.manifest.attributes([
    'Specification-Title'   : 'CDU-Utilities',
    'Specification-Version' : '1',
    'Implementation-Title'  : project.name,
    'Implementation-Version': project.jar.archiveVersion
])
